--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
             <p class="texto-resultado"></p>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="java.js"></script>
 </body>
 </html>
